Fixed the spacing & containters included in Home.css

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,38 +1,32 @@
 .home_container{ 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    align-items: center;
-    justify-content: center;
-    background-color: var(--body-color);
-  }
-  .home_img_container {
-    position: relative;
-    width: 94%;
-  }
-  .image_background{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: none;
-  }
-  .our_img{
-    position: absolute;
-    width: 85%;
-    top: 0;
-    right: 0;
-    border-radius: 50%;
-  }
-  
-  .home_content_container {
-    display: block;
-    width: 100%;
-    max-width: 400px;
-    align-items: center;
-    justify-content: center;
-  }
-  .home_content_title {
-    
-  }
-  .home_content_text {
-  
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  align-items: center;
+  justify-content: center;
+  background-color: var(--body-color);
+}
+.home_img_container {
+  position: relative;
+  width: 94%;
+}
+.image_background{
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+.our_img{
+  position: absolute;
+  width: 85%;
+  top: 0;
+  right: 0;
+  border-radius: 50%;
+}
+
+.home_content_container {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  align-items: center;
+  justify-content: center;
+}
